prevent scrollbar flapping when zoomed

--- a/src/new.sass
+++ b/src/new.sass
@@ -1,6 +1,10 @@
 *
   box-sizing: border-box
 
+:root
+  // prevent scrollbar flapping when zoomed
+  overflow: hidden
+
 body
   margin: 0
 
